--- a/JS2.html
+++ b/JS2.html
@@ -24,7 +24,7 @@
         // Loops (While, For, )
 
         var num =1;
-        while num<=10{
+        while (num<=10){
             document.write(num+"<br>");
             num++;
         }
@@ -34,4 +34,5 @@
         }
     </script>
 </body>
+
 </html>
