commit new code

--- a/JS2.html
+++ b/JS2.html
@@ -36,9 +36,15 @@
             document.write(num+"<br>");
         }while (num<=10)
 
-        // for (var num = 15; num <= 20; num++){
-        //     document.write(num+"<br>");
-        // }
+        for (var num = 15; num <= 20; num++){
+            document.write(num+"<br>");
+        }
+        // output = 15,16,17,18,q9,20
+        for (let rollno = 1;rollno<=10;rollno++){
+            if (rollno ==7){
+                break;
+            }
+        }
     </script>
 </body>
 </html>
