--- a/JS2.html
+++ b/JS2.html
@@ -21,7 +21,7 @@
         }
 
 
-        
+
         // Loops (While, For, Do-While)
 
         // While Loop (In this case the condition will be checked first and then it will proceed to do operation)
@@ -58,6 +58,53 @@
             }
             document.write(rollno + "<br>")
         } // Output = 1 2 3 4
+
+
+
+        // Switch Case
+
+        let month = "Feb";
+        switch(month){
+            case "Jan":
+                document.write("This is the first month.");
+                break;
+            case "Feb":
+                document.write("This is the second month.");
+                break;
+            case "Mar":
+                document.write("This is the third month.");
+                break;
+            case "Apr":
+                document.write("This is the fourth month.");
+                break;
+            case "May":
+                document.write("This is the fifth month.");
+                break;
+            case "June":
+                document.write("This is the sixth month.");
+                break;
+            case "July":
+                document.write("This is the seventh month.");
+                break;
+            case "Aug":
+                document.write("This is the eighth month.");
+                break;
+            case "Sept":
+                document.write("This is the ninth month.");
+                break;
+            case "Oct":
+                document.write("This is the tenth month.");
+                break;
+            case "Nov":
+                document.write("This is the eleventh month.");
+                break;
+            case "Dec":
+                document.write("This is the twelveth month.");
+                break;
+            default:
+                document.write("This is not a month");
+                break;
+        }
     </script>
 </body>
 </html>
