--- a/JS3.html
+++ b/JS3.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <script>
-        // alert("This is an alert message."); // Will only give one option which is Ok.
-        // confirm("This is a confirmation message."); // Will give two options Ok and Cancel
+        alert("This is an alert message."); // Will only give one option which is Ok.
+        confirm("This is a confirmation message."); // Will give two options Ok and Cancel
         let result=confirm("This is a confirmation message."); // Will show an output based on which option the user chose
         if (result){
             document.write("You clicked on Ok.");
@@ -18,4 +18,5 @@
         }
     </script>
 </body>
+
 </html>
