--- a/JS5.html
+++ b/JS5.html
@@ -41,6 +41,18 @@
         console.log(basketball_player.name)
         basketball_player.name = "Steph Curry";
         console.log(basketball_player.name);
+
+
+
+        // 4. Funtion Constructor
+        function Player(age, name){
+            this.age = age;
+            this.Playername = name;
+        }
+        let player = new Player(28, "Xavi")
+        console.log(player.Playername);
+        let playerr = new Player(30, "Harry")
+        console.log(playerr.Playername)
     </script>
 </body>
 </html>
