--- a/JS5.html
+++ b/JS5.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Objects</title>
-</head>
-<body>
+  </head>
+  <body>
     <script>
-        // 1. Object literal
-        let footballer={
-            name : "Cristiano Ronaldo",
-            number : 7,
-            age : 38,
-            tag : "Best player on Earth",
-            intro:function(){
-                console.log(`The footballer with the number ${footballer.number} on this back. The greatest player in the history of football and the best player in the middle-east. His name is ${footballer.name}.`)
-            }
-        }
-        console.log(footballer);
-        console.log(footballer.number);
-        console.log(footballer["number"]);
-        console.log("The footballer with the number " + footballer.number + " on his back. The greatest player in the history of football. His name is " + footballer.name + ".")
-        footballer.intro();
+      // 1. Object literal
+      let footballer = {
+        name: "Cristiano Ronaldo",
+        number: 7,
+        age: 38,
+        tag: "Best player on Earth",
+        intro: function () {
+          console.log(
+            `The footballer with the number ${footballer.number} on this back. The greatest player in the history of football and the best player in the middle-east. His name is ${footballer.name}.`
+          );
+        },
+      };
+      console.log(footballer);
+      console.log(footballer.number);
+      console.log(footballer["number"]);
+      console.log(
+        "The footballer with the number " +
+          footballer.number +
+          " on his back. The greatest player in the history of football. His name is " +
+          footballer.name +
+          "."
+      );
+      footballer.intro();
 
-        let dancer={}
-        dancer.name = "Michael Jackson";
-        console.log(dancer.name);
+      let dancer = {};
+      dancer.name = "Michael Jackson";
+      console.log(dancer.name);
 
+      // 2. Object Constructor
+      let cricketer = new Object();
+      cricketer.name = "Virat Kohli";
+      console.log(cricketer);
 
+      // 3. Object Create
+      let basketball_player = Object.create(cricketer);
+      console.log(basketball_player.name);
+      basketball_player.name = "Steph Curry";
+      console.log(basketball_player.name);
 
-        // 2. Object Constructor
-        let cricketer = new Object();
-        cricketer.name = "Virat Kohli";
-        console.log(cricketer);
-
-
-
-        // 3. Object Create
-        let basketball_player = Object.create(cricketer);
-        console.log(basketball_player.name)
-        basketball_player.name = "Steph Curry";
-        console.log(basketball_player.name);
-
-
-
-        // 4. Funtion Constructor
-        function Player(age, name){
-            this.age = age;
-            this.Playername = name;
-        }
-        let player = new Player(28, "Xavi")
-        console.log(player.Playername);
-        let playerr = new Player(30, "Harry")
-        console.log(playerr.Playername)
+      // 4. Funtion Constructor
+      function Player(age, name) {
+        this.age = age;
+        this.Playername = name;
+      }
+      let player = new Player(28, "Xavi");
+      console.log(player.Playername);
+      let playerr = new Player(30, "Harry");
+      console.log(playerr.Playername);
     </script>
-</body>
+  </body>
 </html>
