--- a/activity.html
+++ b/activity.html
@@ -20,7 +20,16 @@
      }
      even(1,101)
     
-
+function odd(start,end){
+    if(start>end) return;
+    if(start% 2 !==0 ){
+        documen.write(start +"<br>")
+        {
+            odd(start +1,end);
+            add(1,100)
+        }
+    }
+}
     </script>
     
 </body>
