Add comments about JS events to js7.html

--- a/js7.html
+++ b/js7.html
@@ -18,7 +18,30 @@
     <div onclick= "counter()" height="400" width="400" color="red"><img src="kali_logo.png" height="300" width="300" alt="Kali Linux Logo">
    </div>
         <!--onclick ondblclick oncontextmenu onmouseover onmouseout onmousedown onmouseup onmousemove onmouseleave-->
+       <!--
+        onclick = wheneever you click (press and release)
+        ondblclick = double click
+        oncontextmenu = right click
+        onmouseover = when mouse is over the element
+        onmouseout = when mouse is out of the element
+        onmousedown = when mouse is pressed down
+        onmouseup = when mouse is released
+        onmousemove = when mouse is moved
+        onmouseleave = when mouse is moved out of the element
+        onmouseenter = when mouse is moved into the element
+        onkeydown = when key is pressed
+        onkeyup = when key is released
+        onkeypress = when key is pressed and released
+        onfocus = when element gets focus
+        onblur = when element loses focus
+        onsubmit = when form is submitted
+        onreset = when form is reset
+        onselect = when text is selected
+        onchange = when value is changed
+        oninput = when input is given
+        oninvalid = when input is invalid
     
+        -->
    <script>
 //     function generate(){
 //         alert ("There is some event occured  ")
