--- a/JS7.html
+++ b/JS7.html
@@ -33,7 +33,7 @@
              7. onmouseout = whenever you leave the element
              8. onmousemove = whenever you move every pixel
              9. onmousedown = whenever you just press and not release -->
-        <img src="images/kali-linux.png" alt="">
+        <img src="images/kali-linux.png" alt="Kali Linux">
     </div>
 
     <script>
