--- a/JS7.html
+++ b/JS7.html
@@ -67,7 +67,8 @@
             if(document.getElementById("id02").value == ""){
                 document.getElementById("id03").innerText="This field is mandatory";
                 valid=false;
-            };
+            }
+            return valid;
         }
     </script>
 </body>
