--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id = "myH1"></h1>
     <p id = "myP"></p>
     <button onclick = "ShowMessege()">Click here </button>
-
+    <button onclick = "greet()">Greet</button>
     <script src="./index.js"></script>
 </body>
 </html>
